squashing infinite scroll picker bugs

--- a/src/CalendarPicker.module.css
+++ b/src/CalendarPicker.module.css
@@ -32,6 +32,7 @@
 .yearSelect {
   display: flex;
   justify-content: center;
+  gap: 8px;
 
   width: 100%;
   height: 224px;
